Better integrate JRE generation into build pipeline.